<?xml version="1.0"?>
<package format="2">
  <name>lego_loam_bor</name>
  <version>1.0.0</version>
  <description>Fork of LeGO-LOAM</description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <author>Tixiao Shan</author>
  <author>Davide Faconti</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cloud_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>eigen</depend>
  <depend>GTSAM</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
